(fix) cover image jumping

--- a/styles/views/thought.module.scss
+++ b/styles/views/thought.module.scss
@@ -1,5 +1,9 @@
 .cover {
-    @apply mt-[calc(-140px_+_53px)] lg:mt-[calc(-180px_+_53px)] mb-2 col-span-full w-[calc(100%_+_(2_*_1rem))] translate-x-[-1rem] lg:w-[calc(100%_+_(2_*_2rem))] lg:translate-x-[-2rem] max-w-none h-[unset] lg:h-[70vh] object-cover;
+    @apply mt-[calc(-140px_+_53px)] lg:mt-[calc(-180px_+_53px)] mb-2 col-span-full w-[calc(100%_+_(2_*_1rem))] translate-x-[-1rem] lg:w-[calc(100%_+_(2_*_2rem))] lg:translate-x-[-2rem] max-w-none h-[unset] lg:h-[70vh];
+
+    .image {
+        @apply w-full h-full object-cover;
+    }
 }
 
 .header {
